<?xml version="1.0"?>
<package>
    <name>reacharm</name>
    <version>0.0.0</version>
    <description>The vision_server package</description>
    <maintainer email="jeremie.st.jules.prevost@gmail.com">jeremie</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>roslaunch</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>ArmController</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>roslaunch</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>ArmController</run_depend>
</package>
